crates/fig-parser/tests/snapshots/integration_tests__namespaces__declaration_only.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - NamespaceDeclaration:
      visibility: Default
      annotations: []
      name:
        segments:
          - core
        generic_args: []
  - NamespaceDeclaration:
      visibility: Default
      annotations: []
      name:
        segments:
          - std
        generic_args: []
  - NamespaceDeclaration:
      visibility: Default
      annotations: []
      name:
        segments:
          - math
        generic_args: []
