crates/fig-parser/tests/snapshots/integration_tests__namespaces__visibility.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Namespace:
      visibility: Public
      annotations: []
      name:
        segments:
          - api
        generic_args: []
      items:
        - FunctionDeclaration:
            signature:
              visibility: Default
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: version
              generic_params: []
              self_param: ~
              params: []
              return_types:
                - U32
        - FunctionDeclaration:
            signature:
              visibility: Default
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: help
              generic_params: []
              self_param: ~
              params: []
              return_types:
                - Ok
  - Namespace:
      visibility: Export
      annotations: []
      name:
        segments:
          - runtime
        generic_args: []
      items:
        - FunctionDeclaration:
            signature:
              visibility: Export
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: init
              generic_params: []
              self_param: ~
              params: []
              return_types:
                - Ok
        - FunctionDeclaration:
            signature:
              visibility: Public
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: shutdown
              generic_params: []
              self_param: ~
              params: []
              return_types:
                - Ok
