crates/fig-parser/tests/snapshots/integration_tests__namespaces__with_annotations.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Namespace:
      visibility: Default
      annotations:
        - name: deprecated
          args: []
      name:
        segments:
          - legacy
        generic_args: []
      items:
        - FunctionDeclaration:
            signature:
              visibility: Default
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: old_api
              generic_params: []
              self_param: ~
              params: []
              return_types:
                - Ok
  - Namespace:
      visibility: Default
      annotations:
        - name: experimental
          args: []
      name:
        segments:
          - nightly
        generic_args: []
      items:
        - FunctionDeclaration:
            signature:
              visibility: Default
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: new_feature
              generic_params: []
              self_param: ~
              params: []
              return_types:
                - Ok
