crates/fig-parser/tests/snapshots/integration_tests__namespaces__with_types.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Namespace:
      visibility: Default
      annotations: []
      name:
        segments:
          - shapes
        generic_args: []
      items:
        - Struct:
            visibility: Public
            annotations: []
            is_packed: false
            name: Circle
            generic_params: []
            requires: []
            fields:
              - name: cx
                ty: F64
              - name: cy
                ty: F64
              - name: radius
                ty: F64
        - Struct:
            visibility: Public
            annotations: []
            is_packed: false
            name: Rect
            generic_params: []
            requires: []
            fields:
              - name: x
                ty: F64
              - name: y
                ty: F64
              - name: w
                ty: F64
              - name: h
                ty: F64
        - Enum:
            visibility: Public
            annotations: []
            name: ShapeKind
            representation: ~
            generic_params: []
            requires: []
            variants:
              - name: CIRCLE
                value: ~
              - name: RECT
                value: ~
              - name: TRIANGLE
                value: ~
